--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <version>2.2.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
     </dependencies>
 
     
