--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
 
     </dependencies>
 
