Added ability to configure crawl interval in App.properties

--- a/configuration/App.properties
+++ b/configuration/App.properties
@@ -2,4 +2,4 @@ Name = Rohit Vasandani
 Username = rvasanda12
 Password = Escaflowne1
 Email = rvasanda12@gmail.com
-CrawlInterval=1h
+CrawlInterval=30m
